<resources>
    <string name="app_name">Tama</string>
    <string name="share_link">http://q-municate.com</string>
    <string name="share_chooser_title">Share With</string>
    <string name="action_bar_chats">Chats</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_map">Map</string>
    <string name="action_bar_contacts">Contacts</string>
    <string name="action_bar_invite_friends">Invite Friends</string>
    <string name="action_bar_feedback">Feedback</string>
    <string name="action_bar_about">About</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_search_hint">Search</string>
    <string name="action_bar_add_chat">Add Chat</string>
    <string name="action_bar_delete_friend">Delete Friend</string>
    <string name="action_bar_add_friend_to_chat">Add friend to Chat</string>
    <string name="action_bar_leave_chat">Leave Chat</string>
    <string name="action_bar_chat_details">Chat details</string>
    <string name="action_bar_add_chat_attach">Add attach</string>
    <string name="navigation_chats">CHATS</string>
    <string name="navigation_contacts">CONTACTS</string>
    <string name="navigation_map">MAP</string>
    <string name="navigation_my_tama">MY TAMA</string>
    <string name="navigation_settings">SETTINGS</string>
    <string name="landing_connect_with_facebook">Connect with Facebook</string>
    <string name="landing_connect_with_twitter_digits">Connect with phone number</string>
    <string name="landing_already_have_account">Login by email or social</string>
    <string name="landing_sign_up">Sign Up with Email</string>
    <string name="landing_version">v. %1$s</string>
    <string name="auth_sign_up_title">Sign Up</string>
    <string name="auth_login_title">Login</string>
    <string name="auth_forgot_password">Forgot password?</string>
    <string name="auth_or_text">or</string>
    <string name="auth_hint_password">Password</string>
    <string name="auth_log_in_with_facebook">Login with Facebook</string>
    <string name="auth_hint_email">Email</string>
    <string name="auth_remember_me">Remember Me</string>
    <string name="auth_username_error">This username has not authenticated yet, please check your credentials</string>
    <string name="auth_not_all_fields_entered">Please fill all empty input fields</string>
    <string name="auth_email_field_is_incorrect">Please enter a valid email</string>
    <string name="auth_email_field_not_entered">Please enter email</string>
    <string name="auth_password_field_not_entered">Please enter password</string>
    <string name="auth_password_field_is_too_short">Password is too short (minimum is 8 characters)</string>
    <string name="auth_full_name_field_not_entered">Please enter Full Name</string>
    <string name="auth_full_name_field_is_too_short">Full Name is too short (minimum is 3 characters)</string>
    <string name="auth_full_name_field_is_too_long">Full Name is too long (maximum is 50 characters)</string>
    <string name="auth_full_name_has_impossible_characters">Full Name has impossible characters (not allowed: \'&gt;\', \'&lt;\', \';\')</string>
    <string name="auth_first_name_field_is_too_short">Full Name is too short (minimum is 3 characters)</string>
    <string name="auth_first_name_field_is_too_long">Full Name is too long (maximum is 50 characters)</string>
    <string name="auth_first_name_has_impossible_characters">Full Name has impossible characters (not allowed: \'&gt;\', \'&lt;\', \';\')</string>
    <string name="auth_last_name_field_is_too_short">Full Name is too short (minimum is 3 characters)</string>
    <string name="auth_last_name_field_is_too_long">Full Name is too long (maximum is 50 characters)</string>
    <string name="auth_last_name_has_impossible_characters">Full Name has impossible characters (not allowed: \'&gt;\', \'&lt;\', \';\')</string>
    <string name="auth_hint_full_name">Full Name</string>
    <string name="auth_choose_user_picture">Choose user picture</string>
    <string name="user_agreement_title">User Agreement</string>
    <string name="user_agreement_label">By clicking Tick, you agree to Tama\n<b><u>User Agreement</u></b></string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_email_field_not_entered">Please enter email</string>
    <string name="forgot_password_email_field_is_incorrect">Please enter a valid email</string>
    <string name="forgot_password_label">Enter your email and we\'ll send a link to reset your password</string>
    <string name="forgot_password_massage_email_was_sent">Mail was sent to %1$s</string>
    <string name="forgot_password_email_not_found_error">User with this email wasn\'t found</string>
    <string name="user_profile_title">Info</string>
    <string name="user_profile_mobile">Mobile</string>
    <string name="user_profile_send_message">Send Message</string>
    <string name="user_profile_audio_call">Audio Call</string>
    <string name="user_profile_video_call">Video Call</string>
    <string name="user_delete_chat_history">Delete Dialog</string>
    <string name="user_remove_contact_and_chat_history">Remove Contact and Chat</string>
    <string name="user_profile_remove_contact_and_chat_history">Do you really want to delete %1$s from your contact list with his chat?</string>
    <string name="user_profile_delete_chat_history">Do you really want to delete chat history with %1$s?</string>
    <string name="user_profile_success_contacts_deleting">You have deleted %1$s from your contacts</string>
    <string name="user_profile_success_chat_history_deleting">You have deleted chat history with %1$s</string>
    <string name="user_profile_chat_does_not_exists">Chat does not exists</string>
    <string name="new_message_title">New Message</string>
    <string name="new_message_create_group">Create group</string>
    <string name="new_message_no_friends_for_new_message">You don\'t have any Friends for creating New Chat</string>
    <string name="new_message_no_friends">You don\'t have any Friends</string>
    <string name="new_group_title">New Group</string>
    <string name="new_group_no_friends_for_creating_group">No friends for creating group</string>
    <string name="new_group_add_people">Add People</string>
    <string name="create_group_title">New Group</string>
    <string name="create_group_group_name">Group Name</string>
    <string name="create_group_empty_group_name">Group name can not be empty</string>
    <string name="create_group_participants">%1d participants</string>
    <string name="create_group_confirm_selecting_photo">Do you really want to load this photo?</string>
    <string name="add_friends_to_group_title">Add Friends</string>
    <string name="add_friends_to_group_no_friends_for_adding">No Friends for adding</string>
    <string name="dialog_hint_message">Message</string>
    <string name="dialog_no_chats">Oops… You don\'t have any chats,  go in private chat  via Friends Details page</string>
    <string name="dialog_reply">Reply</string>
    <string name="dialog_user_is_not_friend">User is not your friend</string>
    <string name="dialog_confirm_sending_attach">Do you really want to send %1$s?</string>
    <string name="dialog_attach_image">attachment image</string>
    <string name="dialog_attach_audio">attachment audio</string>
    <string name="dialog_attach_video">attachment video</string>
    <string name="dialog_location">location</string>
    <string name="dialog_now_typing">Typing…</string>
    <string name="dialog_message_reject_friend">Do you really want to reject contact request from %1$s?</string>
    <string name="dialog_ctx_menu_reply">Reply</string>
    <string name="dialog_ctx_menu_prv_message">Private Message</string>
    <string name="dialog_ctx_menu_video_call">Video Call</string>
    <string name="dialog_ctx_menu_profile">View Profile</string>
    <string name="dialog_ctx_menu_remove">Leave and remove chat</string>
    <string name="dialog_ctx_menu_delete">Delete dialog</string>
    <string name="dialog_loading_dialogs">Updating dialogs list… Please wait</string>
    <string name="dialog_record_cancel">slide to cancel</string>
    <string name="dialog_record_canceled">Audio recording has been canceled</string>
    <string name="dlg_need_permission_write_storage">%s needs access to your External Storage so that you can send and save files</string>
    <string-array name="dialog_attach_types_array">
        <item>Take Photo</item>
        <item>From Library</item>
    </string-array>
    <string name="dialog_details_title">Group Details</string>
    <string name="dialog_details_leave_group">Leave group</string>
    <string name="dialog_details_participants">%1$d participants</string>
    <string name="dialog_details_online_participants">%1$d/%2$d online</string>
    <string name="dialog_details_name_not_entered">Please fill group name</string>
    <string name="dialog_details_all_friends_is_in_group">You can\'t add new friend, because all existing friends are added in this group chat</string>
    <string name="dialog_details_service_is_initializing">Please, wait, connection is setting up…</string>
    <string name="settings_title">Settings</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_push_notifications">Push Notifications</string>
    <string name="settings_save_photo_video">Save Photo &amp; Video</string>
    <string name="settings_version">Version %1$s</string>
    <string name="settings_invite_friends">Invite Friends</string>
    <string name="settings_give_feedback">Give Feedback</string>
    <string name="settings_delete_my_account">Delete My Account</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_password_change">Change</string>
    <string name="change_password_hint_old_password">Old Password</string>
    <string name="change_password_hint_new_password">New Password</string>
    <string name="change_password_all_fields_not_entered">Please fill all empty input fields</string>
    <string name="change_password_old_password_not_entered">Please enter old password</string>
    <string name="change_password_new_password_not_entered">Please enter new password</string>
    <string name="change_password_old_password_wrong">Wrong old password</string>
    <string name="profile_title">Edit</string>
    <string name="profile_full_name">Full Name</string>
    <string name="profile_change_photo">Change photo</string>
    <string name="profile_full_name_not_entered">Please enter Full Name</string>
    <string name="profile_first_name_not_entered">Please enter First Name</string>
    <string name="dlg_ok">OK</string>
    <string name="back">BACK</string>
    <string name="incoming_request_one_line">INCOMING REQUEST</string>
    <string name="outgoing_request">OUTGOING REQUEST</string>
    <string name="denied">DENIED</string>
    <string name="historyProducts">PRODUCTS</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="shopping_cart">SHOPPING CART</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="remove">Remove</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="checkout">Checkout</string>
    <string name="grand_total">Grand Total</string>
    <string name="history_all">All</string>
    <string name="my_tama">MyTama</string>
    <string name="history_tama_express">TamaExpress</string>
    <string name="history_tama_topup">TamaTopup</string>
    <string name="price_">Price: </string>
</resources>