<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:minHeight="40dp"
    android:maxHeight="40dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="2dp"
        android:gravity="center"
        android:src="@drawable/world_icon"
        android:scaleType="centerInside"
        android:background="@drawable/shape_rect_light"
        android:text="@string/image"/>
    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="12sp"
        android:background="@drawable/shape_rect_light"
        android:text="@string/name"/>
    <TextView
        android:id="@+id/unite_price_text_view"
        android:layout_width="55dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="12sp"
        android:background="@drawable/shape_rect_light"
        android:text="@string/unit_price"/>

    <EditText
        android:id="@+id/quantity_text_view"
        android:layout_width="55dp"
        android:layout_height="match_parent"
        android:background="@drawable/shape_rect_light"
        android:gravity="center"
        android:paddingEnd="1dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:paddingStart="1dp"
        android:text="@string/quantity"
        android:imeOptions="actionDone"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/total_text_view"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="12sp"
        android:background="@drawable/shape_rect_light"
        android:text="@string/total"/>
    <ImageView
        android:id="@+id/remove_view"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="15dp"
        android:src="@drawable/ic_remove"
        android:scaleType="centerInside"
        android:background="@drawable/shape_rect_light"/>

</LinearLayout>