<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.tama.chat.ui.fragments.tamaaccount.ShoppingCartFragment">

  <TextView
    android:id="@+id/fragment_title_text"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp"
    android:background="@color/button_red_normal"
    android:text="@string/shopping_cart"
    android:textColor="@color/tama_account_text"
    android:textSize="15sp" />

  <LinearLayout
    android:id="@+id/list_view_title"
    android:layout_width="match_parent"
    android:layout_height="18dp"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/fragment_title_text"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
      android:layout_width="40dp"
      android:layout_height="match_parent"
      android:background="@drawable/shape_rect_grey"
      android:gravity="center"
      android:text="@string/image"
      android:textSize="12sp" />
    <TextView
      android:layout_width="20dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@drawable/shape_rect_grey"
      android:gravity="center"
      android:text="@string/name"
      android:textSize="12sp" />
    <TextView
      android:layout_width="55dp"
      android:layout_height="match_parent"
      android:background="@drawable/shape_rect_grey"
      android:gravity="center"
      android:text="@string/unit_price"
      android:textSize="12sp" />
    <TextView
      android:layout_width="55dp"
      android:layout_height="match_parent"
      android:paddingStart="1dp"
      android:paddingEnd="1dp"
      android:paddingLeft="1dp"
      android:paddingRight="1dp"
      android:background="@drawable/shape_rect_grey"
      android:gravity="center"
      android:text="@string/quantity"
      android:textSize="12sp" />
    <TextView
      android:layout_width="50dp"
      android:layout_height="match_parent"
      android:background="@drawable/shape_rect_grey"
      android:gravity="center"
      android:text="@string/total"
      android:textSize="12sp" />
    <TextView
      android:layout_width="40dp"
      android:layout_height="match_parent"
      android:paddingStart="1dp"
      android:paddingEnd="1dp"
      android:paddingLeft="1dp"
      android:paddingRight="1dp"
      android:background="@drawable/shape_rect_grey"
      android:gravity="center"
      android:text="@string/remove"
      android:textSize="12sp" />

  </LinearLayout>

  <ListView
    android:id="@+id/shopping_cart_list_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="125dp"
    android:layout_below="@+id/list_view_title"
    tools:listitem="@layout/item_shopping_cart_list_view" />

  <!--android:background="@drawable/shape_rect_light"-->
  <LinearLayout
    android:id="@+id/grand_total_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="-125dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/shopping_cart_list_view"
    android:gravity="center"
    android:orientation="vertical">
    <!--1-->
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="25dp"
      android:orientation="horizontal">
      <TextView
        android:textStyle="bold"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:paddingLeft="0dp"
        android:paddingRight="5dp"
        android:gravity="center_vertical|end"
        android:text="Sub total:"
        android:textColor="@color/black"
        android:textSize="14sp" />
      <TextView
        android:id="@+id/sub_total_text"
        android:textStyle="bold"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="0dp"
        android:gravity="center_vertical|start"
        android:textColor="@color/tama_light_blue"
        android:textSize="14sp"
        tools:text="100" />
    </LinearLayout>
    <!--2-->
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="25dp"
      android:orientation="horizontal">
      <TextView
        android:textStyle="bold"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:paddingLeft="0dp"
        android:paddingRight="5dp"
        android:gravity="center_vertical|end"
        android:text="Shipping:"
        android:textColor="@color/black"
        android:textSize="14sp" />
      <TextView
        android:id="@+id/shipping_total_text"
        android:textStyle="bold"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="0dp"
        android:gravity="center_vertical|start"
        android:textColor="@color/tama_light_blue"
        android:textSize="14sp"
        tools:text="100" />
    </LinearLayout>
    <!--3-->
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="25dp"
      android:orientation="horizontal">
      <TextView
        android:textStyle="bold"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:paddingLeft="0dp"
        android:paddingRight="5dp"
        android:gravity="center_vertical|end"
        android:text="@string/grand_total"
        android:textColor="@color/tama_light_blue"
        android:textSize="14sp" />
      <TextView
        android:id="@+id/grand_total_text"
        android:textStyle="bold"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="0dp"
        android:gravity="center_vertical|start"
        android:textColor="@color/tama_light_blue"
        android:textSize="14sp"
        tools:text="100" />
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
    android:id="@+id/button_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/grand_total_layout"
    android:orientation="horizontal">
    <Button
      android:id="@+id/continue_shopping_btn"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="@dimen/topup_button_height"
      android:layout_weight="1"
      android:layout_marginEnd="6dp"
      android:layout_marginRight="6dp"
      android:background="@drawable/selector_button_green_rect"
      android:text="@string/continue_shopping"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="@dimen/topup_button_text_size" />
    <Button
      android:id="@+id/checkout_btn"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="@dimen/topup_button_height"
      android:layout_weight="1"
      android:layout_marginStart="6dp"
      android:layout_marginLeft="6dp"
      android:background="@drawable/selector_button_orange_rect"
      android:text="@string/checkout"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="@dimen/topup_button_text_size" />
  </LinearLayout>

</RelativeLayout>
