<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tama.chat.ui.fragments.tamaaccount.SingleProductFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/historyProducts"
            android:textColor="@color/tama_account_text"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="3dp"
            android:background="@color/button_red_normal"/>

        <TextView
            android:id="@+id/product_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment_title_text"
            android:text="@string/historyProducts"
            android:textColor="@color/button_red_normal"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="3dp"/>

        <ImageView
            android:id="@+id/item_products_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/tama_light_grey"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/product_name_text"
            android:src="@drawable/world_icon"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/product_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_products_image"
            android:text="@string/price_"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_products_image"
            android:layout_toRightOf="@id/product_price_text"
            android:layout_toEndOf="@id/product_price_text"
            tools:text="100"
            android:textColor="@color/button_red_normal"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="3dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_layout"
            android:layout_below="@+id/product_price_text"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/add_to_cart"
                android:layout_width="0dp"
                android:layout_height="@dimen/topup_button_height"
                android:background="@drawable/selector_button_red_rect"
                android:textColor="@color/white"
                android:text="@string/add_to_cart"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/topup_button_text_size"
                android:layout_marginRight="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="@dimen/topup_button_height"
                android:background="@drawable/selector_button_green_rect"
                android:textColor="@color/white"
                android:text="@string/back"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/topup_button_text_size"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
